--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ ul{
 }
 .activenav:hover {
     color: var(--active-color);
+    
 }
 .header-nav .link.current {
     color: var(--active-color);
@@ -258,6 +259,7 @@ ul{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
+
 }
 .backdrop.is-hidden{
     opacity: 0;
@@ -553,6 +555,7 @@ ul{
     cursor: pointer;
     border-color: transparent;
     padding: 6px 22px 6px 22px;
+    
 }
 .filtr-btn-text {
     font-family: inherit;
@@ -571,6 +574,7 @@ ul{
 .filtr-btn:hover{
     background: var(--btn-hover);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    
 }
 .filtr-btn-text:hover {
     font-family: inherit;
@@ -653,19 +657,36 @@ ul{
     letter-spacing: 0.03em;
     color: var(--portfolio-text-color);
 }
-.portfolio-description{
+.portfolio-overlay{
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
     
 }
 .portfolio-description-text{
     position: absolute;
+    left: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    background: rgba(33, 150, 243, 0.9);
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 0.03em;
     color: #FFFFFF;
-    background: rgba(33, 150, 243, 0.9);
+    transform: translatey(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+
+
+}
+.portfolio-overlay:hover .portfolio-description-text {
+    transform: translatex(0);
+    
+    
 }
 
 
@@ -735,10 +756,7 @@ ul{
     display: flex;
     align-items: baseline;
 }
-/* .footer-soc{
-    padding-top: 72px;
-    padding-bottom: 72px;
-} */
+
 
 .footer-soc-item:not(:last-child) {
     margin-right: 10px;
@@ -757,8 +775,10 @@ ul{
 }
 .footer-soc-link:hover {
     background-color: var(--fillactive-color);
+
 }
 .footer-soc-link:focus {
     background-color: var(--fillactive-color);
+
 }
 
