--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,8 @@ ul{
     width: 100%;
     height: 4px;
     background-color: var(--active-color);
+    border-radius: 2px;
+    
     
 }
 
@@ -259,11 +261,13 @@ ul{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
+    transform: scale(0.5) rotate(-290deg);
 }
 .modal{
     position: absolute;
@@ -272,19 +276,20 @@ ul{
     transform: translate(-50%, -50%);
     min-width: 528px;
     min-height: 581px;
-
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%) scale(1) rotate(0);
 
 }
 .modal-btn{
     position: absolute;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     top: 8px;
     right: 8px;
     width: 30px;
