--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     --portfolio-title-color:#212121;
     --portfolio-text-color:#757575;
     --feature-background-color: #FFFFFF;
+    --feature-icons-color: #F5F4FA;
     --about-background-color: #FFFFFF;
     --team-background-color: #F5F4FA;
     --team-content-color: #FFFFFF;
@@ -268,9 +269,12 @@ ul{
 
 }
 .backdrop.is-hidden{
+    visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    transform: scale(0.5) rotate(-290deg); 
+}
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(1);
 }
 .modal{
     position: absolute;
@@ -278,15 +282,17 @@ ul{
     left: 50%;
     min-width: 528px;
     min-height: 581px;
-    background: #FFFFFF;
+    background: var(--banner-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translate(-50%, -50%) scale(1) rotate(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%) scale(1);
 
 }
+
+
 .modal-btn{
     position: absolute;
     display: flex;
@@ -297,7 +303,7 @@ ul{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background: #FFFFFF;
+    background: var(--banner-text-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
 
@@ -337,7 +343,7 @@ ul{
     align-items: center;
     width: 270px;
     height: 120px;
-    background: #F5F4FA;
+    background: var(--feature-icons-color);
     border-radius: 4px;
     margin-bottom: 30px;
 }
@@ -402,7 +408,7 @@ ul{
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--team-content-color);
     background: rgba(47, 48, 58, 0.8);
 
 }
@@ -512,7 +518,7 @@ ul{
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em; 
-    color: #212121;
+    color: var(--title-color);
     margin-bottom: 50px;
 }
 .client-list{
@@ -560,6 +566,8 @@ ul{
     cursor: pointer;
     border-color: transparent;
     padding: 6px 22px 6px 22px;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     
 }
 .filtr-btn-text {
@@ -570,6 +578,7 @@ ul{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--filter-btn-text);
+
 }
 .currentbtn {
     background: var(--btn-hover);
@@ -579,6 +588,7 @@ ul{
 .filtr-btn:hover{
     background: var(--btn-hover);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    
     
 }
 .filtr-btn-text:hover {
@@ -622,6 +632,7 @@ ul{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .portfolio-link:focus {
@@ -681,7 +692,7 @@ ul{
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--team-content-color);
     transform: translatey(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
@@ -715,11 +726,7 @@ ul{
     display: block;
     
 }
-/* .footer-address{
-    padding-top: 60px;
-    padding-bottom: 60px;
-    
-} */
+
 .address {
     display: block;
     font-style: normal;
@@ -740,6 +747,7 @@ ul{
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contact:hover, .footer-contact:focus {
     color: var(--active-color);
@@ -776,6 +784,7 @@ ul{
     justify-content: center;
     align-items: center;
     fill: var(--fillbackground-color);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .footer-soc-link:hover {
