--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
     --fillbackground-color: #FFFFFF;
     --fillteam-color: #AFB1B8;
     --typical-margin:30px;
+    --typical-time-transition: 250ms;
+    --typical-cubic-bezier:cubic-bezier (0.4, 0, 0.2, 1);
 
 }
 body{
@@ -103,7 +105,7 @@ ul{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--header-logo-color);
+    
 
     
 }
@@ -111,7 +113,12 @@ ul{
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--header-logo-color);
+    transition-property: color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
+    
+
 }
 .header-nav:not(:last-child)  {
     margin-right: 50px;
@@ -166,7 +173,9 @@ ul{
     padding-top: 32px;
     padding-bottom: 32px;
     display: flex;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 }
 .contact-list:not(:last-child) {
     margin-right: 30px;
@@ -232,7 +241,9 @@ ul{
     border-radius: 4px;
     cursor: pointer;
     border: none;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color, background, box-shadow;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 
 }
 
@@ -265,7 +276,9 @@ ul{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition-property: opacity, visibility;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 
 }
 .backdrop.is-hidden{
@@ -287,7 +300,9 @@ ul{
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: transform;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
     transform: translate(-50%, -50%) scale(1);
 
 }
@@ -483,7 +498,6 @@ ul{
     justify-content: center;
 }
 
-.team-soc-item {}
 
 .team-soc-item+ .team-soc-item{
     margin-left: 10px;
@@ -499,7 +513,9 @@ ul{
     border-radius: 50%;
     background-color: var(--team-content-color);
     fill: var(--fillteam-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: fill, background-color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 }
 .team-soc-link:hover {
     background-color: var(--fillactive-color);
@@ -539,8 +555,10 @@ ul{
     box-sizing: border-box;
     border-radius: 4px;
     fill: var(--fillteam-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: fill,
+    border-color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 }
 .client-link:hover {
     border: 1px solid #2196F3;
@@ -566,8 +584,11 @@ ul{
     cursor: pointer;
     border-color: transparent;
     padding: 6px 22px 6px 22px;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition-property: color,
+    background,
+    box-shadow;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
     
 }
 .filtr-btn-text {
@@ -578,6 +599,7 @@ ul{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--filter-btn-text);
+
 
 }
 .currentbtn {
@@ -632,8 +654,9 @@ ul{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition-property: box-shadow;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 }
 .portfolio-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -693,10 +716,10 @@ ul{
     line-height: 28px;
     letter-spacing: 0.03em;
     color: var(--team-content-color);
-    transform: translatey(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-
+    transform: translatey(101%);
+    transition-property: transform, background, color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 
 }
 .portfolio-link:hover .portfolio-description-text {
@@ -739,8 +762,11 @@ ul{
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--footer-text-color);
-    margin-right: 70px;
     
+    
+}
+.footer-address{
+    margin-right: 70px;
 }
 .address-list:not(:last-child){
     margin-bottom: 9px;
@@ -752,7 +778,9 @@ ul{
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);
 }
 .footer-contact:hover, .footer-contact:focus {
     color: var(--active-color);
@@ -776,6 +804,7 @@ ul{
 }
 
 
+
 .footer-soc-item:not(:last-child) {
     margin-right: 10px;
 }
@@ -789,8 +818,9 @@ ul{
     justify-content: center;
     align-items: center;
     fill: var(--fillbackground-color);
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition-property: background;
+    transition-duration: var(--typical-time-transition);
+    transition-timing-function: var(--typical-cubic-bezier);  
 }
 .footer-soc-link:hover {
     background-color: var(--fillactive-color);
